--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "@fortawesome/fontawesome-free": "6.0.0",
     "@popperjs/core": "2.11.7",
     "@tailwindcss/forms": "0.5.3",
+    "bcryptjs": "^2.4.3",
     "chart.js": "^4.3.0",
+    "dotenv": "^16.4.7",
     "gulp": "4.0.2",
     "gulp-append-prepend": "1.0.9",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.9.3",
     "next": "13.4.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
