--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "gulp-append-prepend": "1.0.9",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.3",
+    "multer": "^1.4.5-lts.1",
     "next": "13.4.6",
+    "next-connect": "^1.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-scripts": "5.0.1",
