--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bcryptjs": "^2.4.3",
     "chart.js": "^4.3.0",
     "dotenv": "^16.4.7",
+    "express-rate-limit": "^7.5.0",
     "formidable": "^3.5.2",
     "gulp": "4.0.2",
     "gulp-append-prepend": "1.0.9",
@@ -24,7 +25,8 @@
     "react-dom": "18.2.0",
     "react-quill": "^2.0.0",
     "react-scripts": "5.0.1",
-    "tailwindcss": "3.3.2"
+    "tailwindcss": "3.3.2",
+    "xss": "^1.0.15"
   },
   "scripts": {
     "start": "next start",
